<resources>
    <string name="app_name">Bucket Buds</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="gmail">gmail</string>
    <string name="log_in">log in</string>
    <string name="no_acct">Don\'t already have an account?</string>
    <string name="agreement">You are agreeing to the Bucket Buds </string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="sign_up">Sign up</string>
    <string name="inspo">Inspiration</string>
    <string name="buckets">Buckets</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="edit_profile_info">Edit Profile Info</string>
    <string name="bio">bio...</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bucket_list_name">bucket list name</string>
    <string name="describe_your_bucket_list">describe your bucket list</string>
    <string name="sort_filter_bucket_lists">Sort/Filter Bucket Lists</string>
    <string name="created_at">Created At</string>
    <string name="last_modified">Last Modified</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="filter_buckets">Filter Buckets:</string>
    <string name="all">All</string>
    <string name="completed">Completed</string>
    <string name="active">Active</string>
    <string name="sort_by">Sort By:</string>
    <string name="website">website</string>
    <string name="location">location</string>
    <string name="description">description</string>
    <string name="title">title</string>
    <string name="edit_bucket_info">Edit Bucket Info</string>
    <string name="set_dates">Set Dates</string>
    <string name="create_calendar_event">Create Calendar Event</string>
    <string name="edit_activity_info">Edit Activity Info</string>
    <string name="delete_activity">Delete Activity</string>
    <string name="get_random_idea">Get Random Idea</string>
    <string name="find_local_activities">Find Local Activities</string>
    <string name="add_to_bucket">Add to Bucket</string>
    <string name="delete_bucket">Delete Bucket</string>
    <string name="delete">delete</string>
    <string name="edit">Edit</string>
    <string name="calendar">Calendar</string>
    <string name="create">Create</string>
    <string name="add">Add</string>
    <string name="sort_filter">Sort/Filter</string>
    <string name="map">Map</string>
    <string name="send">Send</string>
    <string name="request_to_join">Request to join:</string>
    <string name="requests">Requests</string>
    <string name="requested_to_join">Requested to join:</string>
    <string name="bucket_requests">Bucket Requests</string>
</resources>