<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:gravity="center_horizontal"
        android:text="@string/edit_profile_info"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etFirstNameDE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/lato"
        android:hint="@string/first_name"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etLastNameDE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/lato"
        android:hint="@string/last_name"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etUsernameDE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etEmailDE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/lato"
        android:hint="@string/gmail"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etBioDE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/lato"
        android:hint="@string/bio"
        android:lines="2"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnCancelDE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/grape"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnSaveDE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/cadet_blue"
            android:text="@string/save" />
    </RelativeLayout>

</LinearLayout>