<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/etConfirmPasswordSA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPasswordSA"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etUsernameSA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFirstName"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/username"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etPasswordSA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmailSA"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etEmailSA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsernameSA"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/gmail"
        android:inputType="textPassword|textEmailAddress"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/powder_blue"
        android:text="@string/sign_up" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:scaleX="1"
        android:scaleY="1"
        app:srcCompat="@drawable/title" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etConfirmPasswordSA"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:text="@string/agreement"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etConfirmPasswordSA"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/textView"
        android:text="@string/terms_of_service"
        android:textColor="@color/cadet_blue" />
</RelativeLayout>