<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:background="@drawable/dialog_rounded"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTitleDAA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:gravity="center_horizontal"
        android:text="Create New Activity"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etTitleDAA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/lato"
        android:hint="@string/title"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etDescriptionDAA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/lato"
        android:hint="@string/description"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etLocationDAA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/location"
        android:inputType="textEmailAddress"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etWebsiteDAA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/lato"
        android:hint="@string/website"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnCancelDAA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/grape"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnSaveDAA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/cadet_blue"
            android:text="@string/save" />
    </RelativeLayout>

</LinearLayout>