<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsername"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/powder_blue"
        android:text="@string/log_in" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="100dp"
        android:scaleX="1"
        android:scaleY="1"
        app:srcCompat="@drawable/title" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_alignParentStart="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/no_acct"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/textView"
        android:text="@string/sign_up"
        android:textColor="@color/cadet_blue" />
</RelativeLayout>